--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 	<script src="script.js"></script>
 </head>
 <body>
-	<div class="header-box">
-		<h1 class="main-title">MI-Tour</h1>
+	<div class="header-row">
+		<div class="header-box">
+			<h1 class="main-title">MI-Tour</h1>
+			<button type="button" id="resetButton" onclick="deleteAllAnswers()" class="reset-button">Reset &#8634;</button>
+		</div>
 	</div>
 	<div class="body-box">
 		<section class="intro">
