--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 			<h2 class="subtitle">Herzlich willkommen bei uns im Team!</h2>
 			<p class="intro-text">Damit du als Mitarbeiter:in der VBZ, des Unternehmensbereichs Markt und des Teams Information &amp; Produktentwicklung unser Angebot besser kennenlernst und aus Kundenperspektive erlebst, schicken wir dich auf eine circa 3-stündige  MI-Tour. An jeder Station warten kleine Aufgabe auf dich, die dich mit unserem vielfältigen Angebot vertrauter machen.</p>
 			<p class="intro-text">Viel Spass beim Entdecken der VBZ!</p>
-			
+			<button type="button" id="startButton" onclick="startTour()" class="submit-button start-button">Start</button>
 			<div class="hinweise">
 				<h2 class="subtitle">Hinweise:</h2>
 				<ul>
-					<li>Start- und Endpunkt: VBZ Hauptgebäude, Luggwegstrasse 65, 8048 Zürich</li>
+					<li>Startpunkt: Haltestelle Grimselstrasse</li>
+					<li>Endpunkt: VBZ Hauptgebäude, Luggwegstrasse 65, 8048 Zürich</li>
 					<li>Ausrüstung: Gültiges Ticket Zone 110, Stift, Smartphone mit installierter ZVV-App, ZüriMobil-App, PubliBike-App (inkl. Registrierung) und WhatsApp.</li>
 					<li>Generell: Notiere dir während der Tour, was dir durch den Kopf geht, wo du weitere Ideen hast und wo wir uns verbessern können.</li>
 				</ul>
@@ -120,7 +121,7 @@
 			<div class="content">
 				<div class="content-box">
 					<p class="quizz-text">Du bist nun beim Hintereingang des VBZ-Areals und damit am Ende der MI-Tour angekommen. Hier befindet sich übrigens eine weitere ZüriMobil-Station. Mit deinem Badge gelangst du durch den Personaleingang wieder zum Hauptgebäude.</p>
-					<p class="quizz-text">Erzähl' Fanny bei einem Kaffee persönlich von deinen Erfahrungen auf der MI-Tour und bringe gerne auch allfällige Ideen ein, welches Erlebnis hier unbe-dingt auch noch rein muss!</p>
+					<p class="quizz-text">Erzähl' Fanny bei einem Kaffee persönlich von deinen Erfahrungen auf der MI-Tour und bringe gerne auch allfällige Ideen ein, welches Erlebnis hier unbedingt auch noch rein muss!</p>
 				</div>
 			</div>
 		<section>
