--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="body-box">
 		<section class="intro">
 			<h2 class="subtitle">Herzlich willkommen bei uns im Team!</h2>
-			<p class="intro-text">Damit du als Mitarbeiter:in der VBZ, des Unternehmensbereichs Markt und des Teams Information &amp; Produktentwicklung unser Angebot besser kennenlernst und aus Kundenperspektive erlebst, schicken wir dich auf eine circa 3-stündige  MI-Tour. An jeder Station warten kleine Aufgabe auf dich, die dich mit unserem vielfältigen Angebot vertrauter machen.</p>
+			<p class="intro-text">Damit du als Mitarbeiter:in der VBZ, des Unternehmensbereichs Markt und des Teams Information &amp; Produktentwicklung unser Angebot besser kennenlernst und aus Kundenperspektive erlebst, schicken wir dich auf eine circa 2.5-stündige MI-Tour. An jeder Station warten kleine Aufgaben auf dich, die dich mit unserem vielfältigen Angebot vertrauter machen.</p>
 			<p class="intro-text">Viel Spass beim Entdecken der VBZ!</p>
 			<button type="button" id="startButton" onclick="startTour()" class="submit-button start-button">Start</button>
 			<div class="hinweise">
@@ -26,7 +26,11 @@
 				<ul>
 					<li>Startpunkt: Haltestelle Grimselstrasse</li>
 					<li>Endpunkt: VBZ Hauptgebäude, Luggwegstrasse 65, 8048 Zürich</li>
-					<li>Ausrüstung: Gültiges Ticket Zone 110, Stift, Smartphone mit installierter ZVV-App, ZüriMobil-App, PubliBike-App (inkl. Registrierung) und WhatsApp.</li>
+					<li>Ausrüstung: Gültiges Ticket Zone 110, Smartphone mit installierter und aktualisierter 
+					<a class="text-link" href="https://www.zvv.ch/zvv/de/service/apps/zvv-app.html" target="_blank">ZVV-App</a>, 
+					<a class="text-link" href=https://www.stadt-zuerich.ch/site/zuerimobil/de/index.html"  target="_blank">ZüriMobil-App</a>, 
+					<a class="text-link" href="https://www.publibike.ch/de/publibike"  target="_blank">Publibike-App</a> (inkl. Registrierung) und WhatsApp.</li>
+					<li>Deine Antworten werden nicht übertragen, sondern nur lokal auf deinem Gerät als Cookies gespeichert. Gerne kannst du sie bei Unklarheiten oder für Bemerkungen im Nachgang mit Fanny besprechen.</li>
 					<li>Generell: Notiere dir während der Tour, was dir durch den Kopf geht, wo du weitere Ideen hast und wo wir uns verbessern können.</li>
 				</ul>
 			</div>
@@ -58,7 +62,7 @@
 				<div class="content-box">
 					<label for="antwort03" class="quizz-label">In der Tramwendeschlaufe Heuried befindet sich eine ZüriMobil-Station. Hier werden nachhaltige Verkehrsmittel gebündelt und der Umstieg vom öV auf die Mikromobilität und umgekehrt fällt besonders leicht. Suche die ZüriMobil-Station Heuried auf der ZüriMobil-App und finde mit einem Klick heraus, welche Sharing-Angebote hier normalerweise zur Verfügung stehen. Welche sind es?</label>
 					<textarea id="antwort03" placeholder="Notiere, was du siehst..." class="text-antwort"></textarea>
-					<p class="quizz-text">Benutze anschliessend die <a class="text-link" href=https://www.stadt-zuerich.ch/site/zuerimobil/de/index.html"  target="_blank">ZüriMobil-App</a> (mit Absprung auf die <a class="text-link" href="https://www.publibike.ch/de/publibike"  target="_blank">Publibike-App</a>) und (e-)radle nach Zürich, Binz. Die schnellste Route findest du mit einer Veloroutenabfrage in der ZüriMobil-App.</p>
+					<p class="quizz-text">Benutze anschliessend die <a class="text-link" href=https://www.stadt-zuerich.ch/site/zuerimobil/de/index.html"  target="_blank">ZüriMobil-App</a> (mit Absprung auf die <a class="text-link" href="https://www.publibike.ch/de/publibike"  target="_blank">Publibike-App</a>) und (e-)radle nach Zürich, Binz. Die schnellste Route einschl. der zu Zürich, Binz bestgelegenen Publibike-Zielstation findest du mit einer Veloroutenabfrage in der ZüriMobil-App.</p>
 					<p class="quizz-text quizz-hinweis">Hinweis: Falls etwas nicht funktioniert oder keine Velos an der Station verfügbar sind, gehst du stattdessen zu Fuss an die Station Zürich, Friesenberg. Den schnellsten Fussweg nach Zürich, Friesenberg findest du mit einer Fussroutenabfrage in der <a class="text-link" href=https://www.stadt-zuerich.ch/site/zuerimobil/de/index.html"  target="_blank">ZüriMobil-App</a>. Folge in Zürich, Friesenberg den Anweisungen unter Zürich, Binz.</p>
 					<button type="button" id="submitButton03" onclick="inputCheck_03()" class="submit-button">Weiter</button>
 				</div>
@@ -75,7 +79,7 @@
 			<button type="button" id="buttonQuiz05" class="collapsible">Zürich, Hauptbahnhof</button>
 			<div class="content">
 				<div class="content-box">
-					<p class="quizz-text">Finde den ZVV-Flagshipstore und sag' deinen neuen Kolleg:innen am Schalter kurz "Hallo".</p>
+					<p class="quizz-text">Finde den <a class="text-link" href="https://www.sbb.ch/content/internet/sbb/de/bahnhof-services/am-bahnhof/bahnhoefe/shopville-zuerich-hb/geschaefte/shop-detail.html/geo-zvv-contact-185d" target="_blank">ZVV-Flagshipstore</a> und sag' deinen neuen Kolleg:innen am Schalter kurz "Hallo".</p>
 					<label for="antwort05" class="quizz-label">Schau' dich etwas um (Angebot, Flyer, Merchandise). Welches Angebot im Store oder welchen Merchandise-Artikel findest du besonders cool?</label>
 					<textarea id="antwort05" placeholder="Notiere dir die Artikel..." class="text-antwort"></textarea>
 					<p class="quizz-text">Gehe zur Haltestelle Bahnhofplatz/Hauptbahnhof. Wenn du nicht weisst, wie du da am einfachsten hinkommst, helfen dir die Kolleg:innen am Schalter gerne weiter.</p>
@@ -85,7 +89,7 @@
 			<button type="button" id="buttonQuiz06" class="collapsible">Bahnhofplatz/Hauptbahnhof</button>
 			<div class="content">
 				<div class="content-box">
-					<label for="antwort06" class="quizz-label">Du möchtest auf das Tram 3 Richtung Albisrieden. Mit einem Blick auf den sogenannten DFI (steht für «Dynamische Fahrgastinformation») erkennst du, wann das nächste Tram kommt. In wie vielen Minuten ist das?</label>
+					<label for="antwort06" class="quizz-label">Du möchtest auf das Tram 3 Richtung Albisrieden. Mit einem Blick auf den sogenannten DFI (steht für «Dynamische Fahrgastinformation») erkennst du, wann das nächste Tram kommt. In wie vielen Minuten fährt das nächste Niederflur-Tram?</label>
 					<textarea id="antwort06" placeholder="Notiere dir die Zeit..." class="text-antwort"></textarea>
 					<p class="quizz-text">Steige ins Tram 3 Richtung Albisrieden.</p>
 					<button type="button" id="submitButton06" onclick="inputCheck_06()" class="submit-button">Weiter</button>
@@ -105,7 +109,7 @@
 			<button type="button" id="buttonQuiz08" class="collapsible">Hubertus</button>
 			<div class="content">
 				<div class="content-box">
-					<label for="antwort08a" class="quizz-label">Am Hubertus hast du viele Anschlussmöglichkeiten. Du möchtest auf den Bus 89 Richtung Heizenholz. Welche Elemente an der Haltestelle helfen dir, beim Umstieg die richtige Haltekante zu finden?</label>
+					<label for="antwort08a" class="quizz-label">Am Hubertus hast du viele Anschlussmöglichkeiten. Du möchtest auf den Bus 89 Richtung Heizenholz. Wie findest du bei einem solchen Umstieg die richtige Haltekante? Notiere dir Haltestellen-Elemente, die dir dabei helfen.</label>
 					<textarea id="antwort08a" placeholder="Notiere, was du siehst..."  class="text-antwort"></textarea>
 					<label for="antwort08b" class="quizz-label">An der Haltestelle des Bus 89 fährt auch eine ganz spezielle Linie. Wie heisst sie und was für ein Konzept steckt dahinter?</label>
 					<textarea id="antwort08b" placeholder="Notiere, was du siehst..."  class="text-antwort"></textarea>
