--- a/index.html
+++ b/index.html
@@ -49,8 +49,20 @@
 			<button type="button" id="buttonQuiz02" class="collapsible">Albisriederplatz</button>
 			<div class="content">
 				<div class="content-box">
-					<label for="antwort02a" class="quizz-label">Am Albisriederplatz befindet sich auf dem Dach der Mittelinsel ein Pilotprojekt des Programms "Smarte Haltestelle". Um was handelt es sich?</label>
+					<label for="antwort02a" class="quizz-label">Am Albisriederplatz befindet sich auf dem Dach der Mittelinsel ein Pilotprojekt des Programms "Smarte Haltestelle", mit dem die VBZ verschiedene Weiterentwicklungen von Haltestellen testet. Um was handelt es sich? Ist es ein begrüntes Dach für mehr Biodiversität, eine PV-Anlage zur sauberen Stromproduktion oder W-Lan-Antennen für freies Internet an der Haltestelle?</label>
 					<textarea id="antwort02a" placeholder="Notiere, was du siehst..."  class="text-antwort"></textarea>
+					<!--<p class="quizz-text">Am Albisriederplatz befindet sich auf dem Dach der Mittelinsel ein Pilotprojekt des Programms "Smarte Haltestelle". Um was handelt es sich?</p>
+					<div>
+						<input type="radio" id="smarte_haltestelle_1"
+						 name="smarte_haltestelle" value="email" checked>
+						<label for="contactChoice1">Email</label>
+						<input type="radio" id="smarte_haltestelle_2"
+						 name="smarte_haltestelle" value="phone">
+						<label for="contactChoice2">Phone</label>
+						<input type="radio" id="smarte_haltestelle_3"
+						 name="smarte_haltestelle" value="mail">
+						<label for="contactChoice3">Mail</label>
+					</div>-->
 					<label for="antwort02b" class="quizz-label">Dein nächstes Ziel ist das Heuried. Nutze die <a class="text-link" href="https://www.zvv.ch/zvv/de/service/apps/zvv-app.html" target="_blank">ZVV-App</a> um dir eine gute öV-Verbindung vom Albisriederplatz zum Heuried heraus zu suchen. Welche Routenoptionen hast du?</label>
 					<textarea id="antwort02b" placeholder="Notiere dir die Optionen..."  class="text-antwort"></textarea>
 					<p class="quizz-text">Reise nun mit der nächsten möglichen Option nach Heuried.</p>
@@ -125,7 +137,7 @@
 			<div class="content">
 				<div class="content-box">
 					<p class="quizz-text">Du bist nun beim Hintereingang des VBZ-Areals und damit am Ende der MI-Tour angekommen. Hier befindet sich übrigens eine weitere ZüriMobil-Station. Mit deinem Badge gelangst du durch den Personaleingang wieder zum Hauptgebäude.</p>
-					<p class="quizz-text">Erzähl' Fanny bei einem Kaffee persönlich von deinen Erfahrungen auf der MI-Tour und bringe gerne auch allfällige Ideen ein, welches Erlebnis hier unbedingt auch noch rein muss!</p>
+					<p class="quizz-text">Erzähle Fanny bei einem Kaffee persönlich von deinen Erfahrungen auf der MI-Tour und bringe gerne auch allfällige Ideen ein, welches Erlebnis hier unbedingt auch noch rein muss!</p>
 				</div>
 			</div>
 		<section>
