--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<button type="button" id="buttonQuiz02" class="collapsible">Albisriederplatz</button>
 			<div class="content">
 				<div class="content-box">
-					<label for="antwort02a" class="quizz-label">Am Albisriederplatz befindet sich auf dem Dach der Mittelinsel ein Pilotprojekt des Programms "Smarte Haltestelle", mit dem die VBZ verschiedene Weiterentwicklungen von Haltestellen testet. Um was handelt es sich? Ist es ein begrüntes Dach für mehr Biodiversität, eine PV-Anlage zur sauberen Stromproduktion oder W-Lan-Antennen für freies Internet an der Haltestelle?</label>
+					<label for="antwort02a" class="quizz-label">Am Albisriederplatz befindet sich auf dem Dach der Mittelinsel ein Pilotprojekt des Programms "Smarte Haltestelle", unter dem die VBZ verschiedene Weiterentwicklungen ihrer Haltestellen zusammenfasst. Handelt es sich beim Pilotprojekt hier um ein begrüntes Dach für mehr Biodiversität, eine PV-Anlage zur sauberen Stromproduktion oder W-Lan-Antennen für freies Internet an der Haltestelle?</label>
 					<textarea id="antwort02a" placeholder="Notiere, was du siehst..."  class="text-antwort"></textarea>
 					<!--<p class="quizz-text">Am Albisriederplatz befindet sich auf dem Dach der Mittelinsel ein Pilotprojekt des Programms "Smarte Haltestelle". Um was handelt es sich?</p>
 					<div>
